<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.FlendzzTask.EmployeeDetails">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#C5BDBD"
        android:gravity="start|center"
        android:paddingStart="16dp"
        android:text="@string/EmployeeDetail"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tokenheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Employee Id:"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:ignore="ObsoleteLayoutParam" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="95dp"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:ignore="ObsoleteLayoutParam" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/token"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/token"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingStart="48dp"
        android:textColor="#000000"
        android:textSize="16sp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Email"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:inputType="textEmailAddress"
        android:paddingStart="48dp"
        android:textColor="#000000"
        android:textSize="16sp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/addressheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:text="@string/Address"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressheading"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:textSize="16sp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mobileheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/Phone"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:paddingStart="110dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@+id/mobile"
        android:layout_marginTop="16dp"
        android:background="#F5F5F5" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/businesstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Business"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="ObsoleteLayoutParam" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/businessheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/businesstitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/BusinessName"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/businesstitle"
        android:paddingStart="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="16sp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/locationheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/business"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/BusinessAddress"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/business2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/business"
        android:paddingStart="140dp"
        android:layout_marginStart="16dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@+id/business2"
        android:layout_marginTop="16dp"
        android:background="#F5F5F5" />
</RelativeLayout>